# NutriChat

./: .gitignore  CLAUDE.MD
.claude/rules/: backend.md  python-sdk.md  swift.md
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  nixpacks.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 5a6864e1b335_initial_tables.py  8a09e0e2e034_widen_api_keys_key_prefix_to_25_chars.py  95b739f437cd_add_food_servings_table_and_meal_entry_.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/integrations/: fatsecret.py
backend/app/middleware/: auth.py
backend/app/routers/: api_keys.py  auth.py  diary.py  food.py  goals.py  stats.py  users.py  weight.py
backend/app/services/: auth.py  food_search.py  sms.py  tdee.py
backend/scripts/: seed_indian_foods.py
docs/: app-store-metadata.md  index.html  privacy-policy.html
nutrichat-ios/NutriChat/App/: AppState.swift  NutriChatApp.swift
nutrichat-ios/NutriChat/Models/: FoodItem.swift  Goal.swift  MealEntry.swift  User.swift
nutrichat-ios/NutriChat/Services/: APIClient.swift  APIKeyService.swift  AuthService.swift  DiaryService.swift  FoodService.swift  KeychainService.swift
nutrichat-ios/NutriChat/Utilities/: Constants.swift  Extensions.swift  FeatureFlags.swift
nutrichat-python/: .env.example  pyproject.toml
nutrichat-python/nutrichat/: __init__.py  _compat.py  client.py  exceptions.py  models.py
nutrichat-python/tests/: conftest.py
nutrichat-python/tests/unit/: test_compat.py  test_log.py  test_search.py  test_totals.py
(+24 files in other folders)
